--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "admin-lte": "^3.2.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "keycloak-js": "^22.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
